--- a/src/app/Components/btnprimario/btnprimario.component.css
+++ b/src/app/Components/btnprimario/btnprimario.component.css
@@ -1,16 +1,20 @@
-/* btnaceptar.component.css, btncancelar.component.css, btnoscuro.component.css, btnprimario.component.css */
+/* Estilos para el botón primario */
 button {
     background-color: #6200ea;
     /* Color de fondo del botón */
     color: white;
     /* Color del texto */
     border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
+    border-radius: 8px;
+    padding: 12px 24px;
     cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
+    transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
+    font-size: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* Sombra */
 }
 
+/* Efecto hover */
 button:hover {
     background-color: #3700b3;
     /* Color al pasar el mouse */
@@ -18,13 +22,15 @@ button:hover {
     /* Efecto de escala al pasar el mouse */
 }
 
-/* Modo oscuro */
+/* Modo oscuro para el botón primario */
 body.dark-mode button {
     background-color: #bb86fc;
     /* Color de fondo del botón en modo oscuro */
+    color: #121212;
+    /* Texto oscuro para contraste */
 }
 
 body.dark-mode button:hover {
-    background-color: #3700b3;
+    background-color: #6200ea;
     /* Color al pasar el mouse en modo oscuro */
 }
