--- a/src/app/Inputs/password/password.component.css
+++ b/src/app/Inputs/password/password.component.css
@@ -10,30 +10,37 @@
     font-size: 12px;
 }
 
-/* texto.component.css, email.component.css, password.component.css */
+/* Estilos para el componente Password */
 input {
     width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    transition: border-color 0.3s;
-}
-
-input:focus {
-    border-color: #6200ea;
-    /* Color del borde al enfocar */
+    padding: 12px;
+    border: 1px solid #444;
+    border-radius: 8px;
+    transition: border-color 0.3s, background-color 0.3s;
+    background-color: #ffffff;
+    /* Fondo claro por defecto */
+    color: #333;
+    /* Texto oscuro */
+    font-size: 16px;
 }
 
 /* Modo oscuro */
 body.dark-mode input {
     background-color: #333;
-    /* Fondo oscuro para inputs */
-    color: white;
-    /* Texto blanco */
+    /* Fondo más oscuro para inputs */
     border: 1px solid #555;
     /* Borde más claro */
+    color: #e0e0e0;
+    /* Texto claro */
 }
 
+/* Estilo de enfoque */
+input:focus {
+    border-color: #bb86fc;
+    /* Color del borde al enfocar */
+}
+
+/* Modo oscuro para el enfoque */
 body.dark-mode input:focus {
     border-color: #bb86fc;
     /* Color del borde al enfocar en modo oscuro */
