--- a/src/app/Inputs/password/password.component.html
+++ b/src/app/Inputs/password/password.component.html
@@ -1,7 +1,7 @@
 <!-- src/app/Inputs/password/password.component.html -->
 <form #passwordForm="ngForm" (ngSubmit)="validatePassword(passwordForm)">
-    <input type="password" [(ngModel)]="password" name="password" required placeholder="Ingrese su contraseña" />
-    <button type="submit">Enviar</button>
+    <input class="input" type="password" [(ngModel)]="password" name="password" required
+        placeholder="Ingrese su contraseña" />
     <ul *ngIf="passwordErrors.length > 0">
         <li *ngFor="let error of passwordErrors">{{ error }}</li>
     </ul>
