--- a/src/app/Inputs/texto/texto.component.html
+++ b/src/app/Inputs/texto/texto.component.html
@@ -1,2 +1,2 @@
 <!-- src/app/Inputs/texto/texto.component.html -->
-<textarea [(ngModel)]="texto" placeholder="Ingrese texto opcional"></textarea>
+<textarea [(ngModel)]="texto" placeholder="Ingrese texto opcional" class="input"></textarea>
