--- a/src/app/Components/btnoscuro/btnoscuro.component.css
+++ b/src/app/Components/btnoscuro/btnoscuro.component.css
@@ -1,30 +1,36 @@
-/* btnaceptar.component.css, btncancelar.component.css, btnoscuro.component.css, btnprimario.component.css */
+/* Estilos para el botón oscuro */
 button {
-    background-color: #6200ea;
-    /* Color de fondo del botón */
+    background-color: #212121;
+    /* Color de fondo del botón oscuro */
     color: white;
     /* Color del texto */
     border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
+    border-radius: 8px;
+    padding: 12px 24px;
     cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
+    transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
+    font-size: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* Sombra */
 }
 
+/* Efecto hover */
 button:hover {
-    background-color: #3700b3;
+    background-color: #000000;
     /* Color al pasar el mouse */
     transform: scale(1.05);
     /* Efecto de escala al pasar el mouse */
 }
 
-/* Modo oscuro */
+/* Modo oscuro para el botón oscuro */
 body.dark-mode button {
-    background-color: #bb86fc;
+    background-color: #212121;
     /* Color de fondo del botón en modo oscuro */
+    color: #ffffff;
+    /* Texto claro para contraste */
 }
 
 body.dark-mode button:hover {
-    background-color: #3700b3;
+    background-color: #000000;
     /* Color al pasar el mouse en modo oscuro */
 }
