--- a/src/app/Components/sumativavisual/sumativavisual.component.css
+++ b/src/app/Components/sumativavisual/sumativavisual.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #FFFFFF;
+
     /* Fondo blanco para contraste */
     border-radius: 15px;
     padding: 30px;
@@ -77,6 +77,7 @@ button:active {
 
 /* Modo oscuro */
 body.dark-mode .container {
+    background: #1e1e1e;
     background-color: #1e1e1e;
     /* Fondo oscuro */
     color: #e0e0e0;
