--- a/src/app/Visualizar/view/view.component.html
+++ b/src/app/Visualizar/view/view.component.html
@@ -1,5 +1,5 @@
 <!-- src/app/Visualizar/view/view.component.html -->
-<div class="container" [ngClass]="{'dark-mode': isDarkMode}">
+<div class="container" [ngClass]="{'dark-mode': colorChange}">
     <p>Modo oscuro: {{ isDarkMode ? 'Activado' : 'Desactivado' }}</p>
 
     <div>
