--- a/src/app/Visualizar/view/view.component.css
+++ b/src/app/Visualizar/view/view.component.css
@@ -11,34 +11,19 @@
     /* Añade la transición para el movimiento y el color */
 }
 
-
-
-
+/* view.component.css */
 .container {
-    flex: 1;
-    /* Ocupa el espacio disponible */
-    margin-right: 40px;
-    /* Espacio entre los componentes */
-    background-color: #F8BBD0;
-    /* Rosa suave */
-    border-radius: 15px;
-    /* Bordes redondeados */
-    padding: 30px;
-    /* Espaciado interno aumentado */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    /* Sombra suave */
-    transition: transform 0.3s;
-    /* Transición suave para el efecto de hover */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #f5f5f5;
+    /* Fondo claro por defecto */
 }
 
 .container:hover {
     transform: scale(1.02);
     /* Efecto de aumento al pasar el mouse */
 }
-
-
-
-
 
 .success-message {
     border: 2px solid green;
